# Kokoro-vllm

./: .gitignore  COMMIT_GUIDELINES.md  CONTRIBUTING.md  LICENSE  README.md  kokoro-tts  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-07-01-kokoro-vllm-v1.md  vllm-interface-notes.md
docs/superpowers/specs/: 2026-07-01-kokoro-vllm-v1-design.md
kokoro_tts/: __init__.py  __main__.py
kokoro_vllm/: __init__.py  config.py
kokoro_vllm/frontend/: chunker.py  g2p.py  vocab.py  voices.py
kokoro_vllm/model/: hf_config.py  kmodel_access.py  kokoro_vllm_model.py  mm_processor.py  pooler.py  register.py  weights.py
kokoro_vllm/server/: __main__.py  app.py  engine.py  schemas.py  streaming.py
previews/: demo.txt
scripts/: convert_weights.py
tests/: test_scaffold.py
tests/frontend/: test_chunker.py  test_g2p.py  test_vocab.py  test_voices.py
tests/model/: test_hf_config.py  test_mm_processor.py  test_parity_gpu.py  test_pooler.py  test_weights_remap.py
tests/server/: test_app.py  test_engine.py  test_schemas.py  test_server_e2e_gpu.py  test_streaming.py
