[project]
name = "kokoro-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ebooklib>=0.18",
    "fitz>=0.0.1.dev2",
    "kokoro-onnx==0.3.9",
    "pymupdf4llm>=0.0.17",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.0",
]
