[project]
name = "kokoro-vllm"
version = "0.1.0"
description = "Serve the Kokoro-82M TTS model through the vLLM V1 engine — an OpenAI-compatible, low-latency streaming FastAPI server. Includes the original ONNX CLI."
readme = "README.md"
requires-python = ">=3.11, <3.13"
license = {text = "MIT"}
authors = [
    {name = "wuxuedaifu", email = "wuxuedaifu@gmail.com"}
]
keywords = ["text-to-speech", "tts", "kokoro", "vllm", "streaming", "server", "openai", "audio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ebooklib>=0.18",
    "kokoro-onnx==0.3.9",
    "pymupdf>=1.25.4",
    "pymupdf-layout>=1.25.4",
    "pymupdf4llm>=0.0.17",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.0",
]

[project.scripts]
kokoro-tts = "kokoro_tts:main"
kokoro-vllm-server = "kokoro_vllm.server.__main__:main"

[project.entry-points."vllm.general_plugins"]
kokoro_register = "kokoro_vllm.model.register:register"

[project.urls]
Homepage = "https://github.com/wuxuedaifu/Kokoro-vllm"
Repository = "https://github.com/wuxuedaifu/Kokoro-vllm"
Issues = "https://github.com/wuxuedaifu/Kokoro-vllm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.1.0",
]

[project.optional-dependencies]
vllm = [
    "vllm==0.24.0",
    "torch>=2.4",
    "kokoro>=0.9.4",
    "misaki>=0.9.4",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "numpy>=1.26",
    "soundfile>=0.13.0",
]

[tool.pytest.ini_options]
markers = [
    "gpu: tests that require a CUDA GPU and real model weights",
]
